tests/error/array_errors/assign_leak.err
Error: Drop violation (at $FILE:8:4)
  | 
6 | @guppy
7 | def main() -> None:
8 |     qs = array(qubit() for _ in range(10))
  |     ^^ Variable `qs` with non-droppable type `array[qubit, 10]` is
  |        leaked

Help: Make sure that `qs` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
